@@ -45,6 +45,7 @@ AC_USE_SYSTEM_EXTENSIONS
 AC_DISABLE_STATIC([])
 LT_INIT
 AC_SYS_LARGEFILE
+AC_SEARCH_LIBS([clock_gettime], [rt])
 
 AC_LANG_PUSH([C])
 AC_MSG_CHECKING([be64toh])
